syntax = "proto3";

package tag;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/kazmerdome/grpc-enricher/internal/module/tag/tag-grpc";

message Tag {
  string id = 1;
  string name = 2;
  string slug = 3;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message TagEnrichParams {
  optional bool enrich_all_fields = 1;
  optional bool enrich_all_relations = 2;

  optional bool id = 3;
  optional bool name = 4;
  optional bool slug = 5;
  optional bool created_at = 7;
  optional bool updated_at = 8;
}
